--- a/basicHTML/ex01_기초태그.html
+++ b/basicHTML/ex01_기초태그.html
@@ -20,8 +20,23 @@
   <h4>타이틀4</h4>
   <h5>타이틀5</h5>
   <h6>타이틀6</h6>
+
+  <!-- p*3하면 p태그를 3개 만들어주라는 자동명령 -->
+  <p>이것이 단락태그1</p>
+  <p>이것이 단락태그2</p>
+  <p>이것이 단락태그3</p>
+  <a half="">test1</a><a half="">test2</a><a half="">test2</a>
+
+  <p>뭐라고 잔뜩 쳐놓으셨네</p>
+  <ul>
+    <li>리스트1</li>
+    <li>리스트2</li>
+    <li>리스트3</li>
+    <ul>
+      <li>내부리스트1</li>
+      <li>내부리스트2</li>
+    </ul>
+  </ul>
 </body>
-
-
 
 </html>
