--- a/ex10_실습3.html
+++ b/ex10_실습3.html
@@ -26,13 +26,13 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      /* 이걸 따로 하지 말고 한번에 묶어서 할 수도 있다... */
     }
 
     section {
       box-sizing: border-box;
       height: 80%;
       display: flex;
-
     }
 
     aside.left {
