--- a/flex/ex18_wrap.html
+++ b/flex/ex18_wrap.html
@@ -21,6 +21,7 @@
       background-color: palevioletred;
       margin: 5px;
       height: 100px;
+      /* width: 200px; */
       width: calc(100% / 3 - 5px*2);
       /* min-width: 150px; */
       border-radius: 3px;
