--- a/flex심화/ex02_반응형웹.html
+++ b/flex심화/ex02_반응형웹.html
@@ -4,10 +4,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>반응형웹</title>
+  <link rel="stylesheet" href="mediatag.css">
+
 </head>
 
 <body>
+  <section>
+    <div class="media">
+      <img src="./image/photo-01.png" alt="이미지1">
+      <div class="media-body">
+        <h3>Feel the nature experience</h3>
+        <p> Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can refer
+          to
+          the phenomena of the physical world, and also to life in general. The study of nature is a large, if not the
+          only, part of science.</p>
+      </div>
+    </div>
+    <div class="media">
+      <img src="./image/photo-02.png" alt="이미지1">
+      <div class="media-body">
+        <h3>Feel the nature experience</h3>
+        <p> Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can refer
+          to
+          the phenomena of the physical world, and also to life in general. The study of nature is a large, if not the
+          only, part of science.</p>
+      </div>
+    </div>
+    <div class="media">
+      <img src="./image/photo-03.png" alt="이미지1">
+      <div class="media-body">
+        <h3>Feel the nature experience</h3>
+        <p> Nature, in the broadest sense, is the natural, physical, or material world or universe. "Nature" can
+          refer
+          to
+          the phenomena of the physical world, and also to life in general. The study of nature is a large, if not
+          the
+          only, part of science.</p>
+      </div>
+    </div>
+  </section>
 
 </body>
 
