--- a/html-css-js/ex12.html
+++ b/html-css-js/ex12.html
@@ -29,49 +29,30 @@
   ];
 
   function print() {
+    users.innerHTML = ''; // 기존 리스트 초기화
     userDataList.forEach(e => {
       let li = document.createElement('li');
       li.innerHTML = e.id + ':' + e.name;
+      //       li.textContent = `${e.id}: ${e.name}`;
       users.appendChild(li);
     })
   }
+
   const btnA = document.querySelector('.ascending');
   const btnD = document.querySelector('.descending');
+
   btnA.addEventListener('click', () => {
     alert('오름차순');
-
-
+    userDataList.sort((a, b) => a.id - b.id);
+    print();
   })
+
   btnD.addEventListener('click', () => {
     alert('내림차순');
+    userDataList.sort((a, b) => b.id - a.id);
+    print();
   })
+
   print();
-
-  // // 리스트를 화면에 출력하는 함수
-  // function print() {
-  //     users.innerHTML = ''; // 기존 리스트 초기화
-  //     userDataList.forEach(e => {
-  //       let li = document.createElement('li');
-  //       li.textContent = `${e.id}: ${e.name}`;
-  //       users.appendChild(li);
-  //     });
-  //   }
-
-  //   const btnA = document.querySelector('.ascending');  // 오름차순 버튼
-  //   const btnD = document.querySelector('.descending'); // 내림차순 버튼
-
-  //   // 오름차순 정렬
-  //   btnA.addEventListener('click', () => {
-  //     userDataList.sort((a, b) => a.id - b.id); // id 기준으로 오름차순 정렬
-  //     print(); // 정렬된 데이터 다시 출력
-  //   });
-
-  //   // 내림차순 정렬
-  //   btnD.addEventListener('click', () => {
-  //     userDataList.sort((a, b) => b.id - a.id); // id 기준으로 내림차순 정렬
-  //     print(); // 정렬된 데이터 다시 출력
-  //   });
-
-  //   print(); // 초기 리스트 출력
 
 </script>
