--- a/html-css-js/01_basic/ex12.html
+++ b/html-css-js/01_basic/ex12.html
@@ -30,6 +30,7 @@
 
   function print() {
     users.innerHTML = ''; // 기존 리스트 초기화
+    //초기화 대신 외부에서 리스트 값을 가져오는 방법도 있음
     userDataList.forEach(e => {
       let li = document.createElement('li');
       li.innerHTML = e.id + ':' + e.name;
